attempt to fix weird whitespace at scrollbar top and bottom

--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -22473,6 +22473,7 @@ video {
 ::-webkit-scrollbar {
   width: 6px;
   height: 6px;
+  background: transparent;
 }
 
 ::-webkit-scrollbar-button {
